# musolver

./: .gitignore  Cargo.toml  LICENSE  README.md
arena/: Cargo.toml
arena/src/: main.rs
benches/: acciones_partida.rs  cfr.rs  info_set_str.rs  se_juega_lance.rs
config/: action_tree.json  simple_action_tree.json
examples/: fase_mus.rs  frecuencias.rs  fsicfr.rs  random_game.rs  rps.rs
inspector/: Cargo.toml
inspector/src/: main.rs  screen.rs
inspector/src/screen/: explorer.rs  game.rs  loader.rs
src/: game.rs  lib.rs  main.rs  mus.rs  solver.rs
src/game/: action_tree.rs  bimatrix_game.rs  cfr.rs  game_error.rs  graph.rs  lemke_howson.rs
src/mus/: arena.rs  baraja.rs  carta.rs  carta_iter.rs  lance.rs  mano.rs  mus_error.rs  partida_mus.rs
src/mus/arena/: agent.rs  kibitzer.rs  mus_arena.rs
src/solver/: abstract_lance.rs  banco_estrategias.rs  lance_game.rs  mus_game.rs  partida_lance.rs  solver_error.rs  strategy.rs  trainer.rs
