[package]
name = "musolver"
version = "0.1.0"
edition = "2021"

[dependencies]
approx = "0.5.1"
chrono = "0.4.38"
clap = { version = "4.5.17", features = ["derive"] }
csv = "1.3.0"
iced = { version = "0.13.1", features = ["canvas"] }
indicatif = "0.17.8"
itertools = "0.13.0"
ndarray = { version = "0.16.0", features = ["approx"] }
ndarray-rand = "0.15.0"
rand = "0.8.5"
rug = "1.26.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.63"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[profile.profiling]
inherits = "release"
debug = true
lto = true

[[bench]]
name = "se_juega_lance"
harness = false

[[bench]]
name = "acciones_partida"
harness = false

[[bench]]
name = "cfr"
harness = false
