[package]
name = "musolver"
version = "0.2.0"
edition = "2024"

[dependencies]
serde_json.workspace = true
approx.workspace = true
arrayvec.workspace = true
async-trait.workspace = true
chrono.workspace = true
clap.workspace = true
csv.workspace = true
indicatif.workspace = true
itertools.workspace = true
ndarray.workspace = true
ndarray-rand.workspace = true
rand.workspace = true
serde.workspace = true
thiserror.workspace = true
walkdir.workspace = true

[target.'cfg(not(windows))'.dependencies]
rug.workspace = true

[target.'cfg(windows)'.dependencies]
num-bigint.workspace = true
num-integer.workspace = true

[workspace]
members = ["arena", "inspector"]

[workspace.dependencies]
approx = "0.5.1"
arrayvec = "0.7.6"
async-trait = "0.1.83"
chrono = "0.4.38"
clap = { version = "4.5.17", features = ["derive"] }
csv = "1.3.0"
indicatif = "0.17.8"
itertools = "0.13.0"
ndarray = { version = "0.16.0", features = ["approx"] }
ndarray-rand = "0.15.0"
num-bigint = "0.4.6"
num-integer = "0.1.46"
rand = "0.8.5"
rug = "1.26.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.63"
walkdir = "2.5.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[profile.profiling]
inherits = "release"
debug = true
lto = true

[[bench]]
name = "se_juega_lance"
harness = false

[[bench]]
name = "acciones_partida"
harness = false

[[bench]]
name = "cfr"
harness = false

[[bench]]
name = "info_set_str"
harness = false
